core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__window_functions__non_negative_difference-3.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT NON_NEGATIVE_DIFFERENCE(SUM(/usage_.*/)) FROM cpu GROUP BY time(10s)\")"
---
Sort: time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None);N, non_negative_difference_usage_idle:Float64;N, non_negative_difference_usage_system:Float64;N, non_negative_difference_usage_user:Float64;N]
  Projection: Dictionary(Int32, Utf8("cpu")) AS iox::measurement, time, non_negative_difference(sum(cpu.usage_idle)) AS non_negative_difference_usage_idle, non_negative_difference(sum(cpu.usage_system)) AS non_negative_difference_usage_system, non_negative_difference(sum(cpu.usage_user)) AS non_negative_difference_usage_user [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None);N, non_negative_difference_usage_idle:Float64;N, non_negative_difference_usage_system:Float64;N, non_negative_difference_usage_user:Float64;N]
    Filter: non_negative_difference(sum(cpu.usage_idle)) IS NOT NULL OR non_negative_difference(sum(cpu.usage_system)) IS NOT NULL OR non_negative_difference(sum(cpu.usage_user)) IS NOT NULL [time:Timestamp(Nanosecond, None);N, sum(cpu.usage_idle):Float64;N, sum(cpu.usage_system):Float64;N, sum(cpu.usage_user):Float64;N, non_negative_difference(sum(cpu.usage_idle)):Float64;N, non_negative_difference(sum(cpu.usage_system)):Float64;N, non_negative_difference(sum(cpu.usage_user)):Float64;N]
      WindowAggr: windowExpr=[[non_negative_difference(sum(cpu.usage_idle)) ORDER BY [time ASC NULLS LAST] ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING AS non_negative_difference(sum(cpu.usage_idle)), non_negative_difference(sum(cpu.usage_system)) ORDER BY [time ASC NULLS LAST] ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING AS non_negative_difference(sum(cpu.usage_system)), non_negative_difference(sum(cpu.usage_user)) ORDER BY [time ASC NULLS LAST] ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING AS non_negative_difference(sum(cpu.usage_user))]] [time:Timestamp(Nanosecond, None);N, sum(cpu.usage_idle):Float64;N, sum(cpu.usage_system):Float64;N, sum(cpu.usage_user):Float64;N, non_negative_difference(sum(cpu.usage_idle)):Float64;N, non_negative_difference(sum(cpu.usage_system)):Float64;N, non_negative_difference(sum(cpu.usage_user)):Float64;N]
        GapFill: series=[], time=date_bin_wallclock(IntervalMonthDayNano("IntervalMonthDayNano { months: 0, days: 0, nanoseconds: 10000000000 }"), time, TimestampNanosecond(0, None)), fill=[sum(cpu.usage_idle), sum(cpu.usage_system), sum(cpu.usage_user)], range=Unbounded..Included(Literal(TimestampNanosecond(1672531200000000000, None), None)) [time:Timestamp(Nanosecond, None);N, sum(cpu.usage_idle):Float64;N, sum(cpu.usage_system):Float64;N, sum(cpu.usage_user):Float64;N]
          Aggregate: groupBy=[[date_bin_wallclock(IntervalMonthDayNano("IntervalMonthDayNano { months: 0, days: 0, nanoseconds: 10000000000 }"), cpu.time, TimestampNanosecond(0, None)) AS time]], aggr=[[sum(cpu.usage_idle), sum(cpu.usage_system), sum(cpu.usage_user)]] [time:Timestamp(Nanosecond, None);N, sum(cpu.usage_idle):Float64;N, sum(cpu.usage_system):Float64;N, sum(cpu.usage_user):Float64;N]
            Filter: cpu.time <= TimestampNanosecond(1672531200000000000, None) [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
              Filter: cpu.usage_idle IS NOT NULL OR cpu.usage_system IS NOT NULL OR cpu.usage_user IS NOT NULL [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
                TableScan: cpu [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
